SC-3702: fix horizontal alignment of primary save button

--- a/sugarcrm/styleguide/less/sugar-specific/rtl.less
+++ b/sugarcrm/styleguide/less/sugar-specific/rtl.less
@@ -1067,6 +1067,13 @@ html.rtl {
                 margin-right: -24px;
             }
         }
+        td:last-child {
+            .edit {
+                > a.btn {
+                    margin-right: 0;
+                }
+            }
+        }
     }
 
     .record .record-cell[data-type="language"] .input-append.error .add-on.error-tooltip,
